[gd_scene load_steps=2 format=3 uid="uid://b5xgclofy1bs1"]

[ext_resource type="Script" path="res://Scripts/HitboxComponent.gd" id="1_p2i8w"]

[node name="HitboxComponent" type="Area3D"]
script = ExtResource("1_p2i8w")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
